# MouseHero

./: .gitignore  LICENSE.txt  README.md
.github/workflows/: build.yml
scripts/: build_appimage.sh  build_unified.sh  build_windows.bat  l10n_audit.py  purge_cdn_urls.py  r2_upload.py  tencent_upload.py
server/: .clang-format  .promots  CMakeLists.txt  coverage.sh
server/rs/: CMakeLists.txt  Cargo.toml  build.rs
server/rs/src/: c.rs  lib.rs
server/scripts/linux/: poweroff.sh  restart.sh  sleep.sh
server/scripts/macos/: poweroff.sh  restart.sh  sleep.sh
server/scripts/windows/: poweroff.bat  restart.bat  sleep.bat
server/src/: key_inject.c  key_inject.h  keycode_map.c  keycode_map.h  run.c  ya_authorize.c  ya_authorize.h  ya_client_manager.c  ya_client_manager.h  ya_config.c  ya_config.h  ya_crash_dump.c  ya_crash_dump.h  ya_error.c  ya_error.h  ya_event.c  ya_event.h  ya_logger.c  ya_logger.h  ya_mouse_filter.c  ya_mouse_filter.h  ya_mouse_throttle.c  ya_mouse_throttle.h  ya_power_scripts.c  ya_power_scripts.h  ya_server.c  ya_server.h  ya_server_command.c  ya_server_command.h  ya_server_discover.c  ya_server_discover.h  ya_server_handler.c  ya_server_handler.h  ya_server_http.c  ya_server_http.h  ya_server_session.c  ya_server_session.h  ya_utils.c  ya_utils.h  ya_xdo.c  (+1 more)
server/src/input/: facade.c  facade.h
server/src/input/backend/: linux_uinput.c  linux_uinput.h  xkb_mapper.c  xkb_mapper.h
server/src/input/keyboard/: clipboard.c  clipboard.h  handler.c  handler.h  mapper.c  mapper.h
server/tests/: CMakeLists.txt  TODO.md  ya_authorize_test.c  ya_client_manager_test.c  ya_config_test.c  ya_crash_dump_test.c  ya_error_test.c  ya_event_test.c  ya_http_test.c  ya_logger_test.c  ya_server_handler_test.c  ya_utils_test.c
server/toolchains/: linux-arm64.cmake  linux-x86.cmake  macos-arm64.cmake  macos-x86.cmake  windows-on-linux-arm64.cmake  windows-on-linux-x86.cmake  windows-on-windows-arm64.cmake  windows-on-windows-x86.cmake
server_gui/: README.md  pubspec.yaml
server_gui/assets/: default.conf
server_gui/lib/: home_page.dart  main.dart
server_gui/lib/help/: udev_setup.md
server_gui/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
server_gui/lib/pages/: about_page.dart  config_page.dart  dashboard_page.dart  linux_permissions_page.dart  log_page.dart
server_gui/lib/providers/: settings_provider.dart
server_gui/lib/services/: api_service.dart  config_service.dart  linux_permissions_service.dart  log_service.dart  network_service.dart  scripts_service.dart  server_process_service.dart  settings_service.dart  single_instance_service.dart  startup_service.dart  system_ctl_service.dart  tray_service.dart  update_service.dart
server_gui/linux/: CMakeLists.txt
server_gui/linux/runner/: my_application.cc
server_gui/macos/Runner/: AppDelegate.swift  MainFlutterWindow.swift  Release.entitlements
server_gui/macos/Runner.xcodeproj/: project.pbxproj
server_gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
server_gui/macos/Runner/Configs/: AppInfo.xcconfig
server_gui/macos/Runner/en.lproj/: InfoPlist.strings
server_gui/macos/Runner/zh-Hans.lproj/: InfoPlist.strings
server_gui/windows/: CMakeLists.txt
server_gui/windows/runner/: Runner.rc  main.cpp
tools/: pve_wol.py
