[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
# crate-type = ["cdylib", "staticlib"]
# crate-type = ["cdylib"]

[dependencies]
arboard = "3.4.1"
enigo = { version = "0.6.1", features = ["wayland",  "libei_tokio", "xdo", "x11rb"] }
env_logger = "0.11"
log = "0.4"

[build-dependencies]
cbindgen = "0.27.0"
